# bgg-scraper

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bgg_scraper/: __main__.py  cli.py  client.py  formatter.py  models.py  parser.py
tests/: test_cli.py  test_client.py  test_formatter.py  test_parser.py
tests/fixtures/: forum_page1.xml  thread_sample.xml
